# greevils-cli

./: .gitignore  README.md  pyproject.toml  sample_agent.py
example-agent/: README.md  entry.py  indicators.py  requirements.txt
greevils_cli/: __init__.py  approve.py  cli.py  commit.py  crypto.py  deploy.py
