[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "greevils-cli"
version = "0.1.0"
description = "Participant CLI for the Greevils confidential trading-agent competition"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "cryptography",
    "eth-account",
    "bittensor==10.4.1",
    "bittensor-cli==9.22.2"
]

[project.scripts]
# Installs a real `greevils` command on PATH (no alias needed): `pip install -e .`
greevils = "greevils_cli.cli:main"

[tool.setuptools]
packages = ["greevils_cli"]
